components/codetools/tests/moduletests/incsearch/inc/Inc_UnitBeforePath.inc
// this file must not be found. It should have found the file in the parent folder instead
wrongfile found // error
